# message_system

./: .dockerignore  .gitignore  Cargo.toml  Makefile  docker-compose.yml  docker-develop.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-dev.Dockerfile  rust.Dockerfile  terraform.tfstate  turbo.json
dev/: docker-develop.sh  (+1 more)
services/notification/: Cargo.toml  build.rs  config.yaml  package.json
services/notification/proto/: notification.proto
services/notification/src/: config.rs  connection_manager.rs  main.rs
services/notification/src/adapters/: mod.rs  rdkafka_adapter.rs  redis_adapter.rs  redis_adapter_test.rs  socket_adapter.rs  tonic_adapter.rs  tonic_sink_adapter.rs  tonic_source_adapter.rs
services/notification/src/adapters/tonic/: notification_service.rs
services/notification/src/domain/: mod.rs
services/notification/src/domain/notification/aggregates/: notification.rs
services/notification/src/domain/notification/exceptions/: mod.rs  send_error.rs
services/notification/src/domain/notification/repositories/: notification_repository.rs
services/notification/src/domain/route/: mod.rs
services/notification/src/domain/route/aggregates/: route.rs
services/notification/src/domain/route/exceptions/: create_error.rs  delete_error.rs  get_error.rs  mod.rs
services/notification/src/domain/route/repositories/: route_repository.rs
services/notification/src/infrastructure/: mod.rs
services/notification/src/ports/: mod.rs  notification_forward_port.rs  notification_port.rs  route_port.rs
services/notification/tests/adapters/: redis.rs
(+143 files in other folders)
