[package]
name = "notification-service"
version = "0.0.1"
edition = "2021"

[dependencies]
async-trait = "0.1.77"
clap = { version = "4.5.1", features = ["derive", "env"] }
futures-util = "0.3.30"
log = "0.4.21"
r2d2 = "0.8.10"
redis = { version = "0.24.0", features = ["tokio-comp", "r2d2", "connection-manager"] }
simple_logger = "4.3.3"
tokio = { version = "1.36.0", features = ["net", "full"] }
tokio-tungstenite = "0.21.0"
