[package]
name = "notification-service"
version = "0.0.1"
edition = "2021"

[dependencies]
async-trait = "0.1.77"
clap = { version = "4.5.1", features = ["derive", "env"] }
futures-util = "0.3.30"
log = { version = "0.4.21", features = ["kv", "kv_std"] }
prost = "0.12.3"
r2d2 = "0.8.10"
rdkafka = "0.36.2"
redis = { version = "0.24.0", features = ["tokio-comp", "r2d2", "connection-manager"] }
simple_logger = "4.3.3"
structured-logger = { version = "1.0.3", default-features = false }
tokio = { version = "1.36.0", features = ["net", "full"] }
tokio-tungstenite = "0.21.0"
tonic = "0.11.0"
tonic-reflection = "0.11.0"

[build-dependencies]
tonic-build = "0.11.0"
